		dig axfr ds9a.nl @213.244.168.210 |    \
		/usr/bin/zone2sql --gmysql --zone=-  | \
		mysql -u pdns pdns
	- the '-' is new
	- there is now better duplicate zone detection
	- allow-recursion-override works but was on by default
	- logging was off
	- debian/rules forgot sqllite
	- removed libpqpp from build-depends
	- recursor accidentally linked in mysql (christopher meerwald)

changes since 2.9.13:
	- logging to syslog can now be restricted (norbert)
	- SOA canonic
	- zone2ldap cleanup
	- LDAP:
> A big patch for the ldapbackend:
> - - Changes to support different lookup methods
> - - Better exception handling
> - - Better support for load distribution
> - - Many cleanups
	- errno compilation fixes in LDAP code (Norbert)
	- pdns_recursor was too chatty with TCP (noticed by Mathew Walker)
	- Generic SQL backend used doQuery where it meant doCommand on set notified (Georg Bauer)
	- experimental feature 'recursion-check-nxdomain'
	- 2^30 
	- postgresql de-c++fiscation
	- efficiency increases (chomp), reworking argumentparsing (spaces)
	- loglevel fixes	

changes since 2.9.12:
	- pdns_recursor can now survive being disconnected from the net for long
	  enough to expire the entire root
	- pdns_recursor now also jumbles answers (it did that already, I
	  just didn't know it)
	- big LDAP cleanup	
	- LDAP now has TLS support
	- Opteron support (opteron login by jeffdavey@submersion.com)
	- fixed errors with disable-axfr (Norbert)
	- improved error reporting in zone2sql (Thom May)
	- Zone2LDAP updates:
		Now it's possible to generate ldif files containing a tree or a list of entries.

- (Windows) Ported 2.9.13 codebase to Windows.
- (Windows) Added the Generic SQLite backend.
- (Windows) Made the Generic ODBC backend conform to the SSql standard
again.
- (Windows) Removed the old ODBC backend.  
- (Windows) The recursor was ported from scratch and now works as an NT
service.
- (Windows) Renamed the service to "PowerDNS" (recursor is called "PowerDNS
Recursor").